manifest/client/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: client
  namespace: spring-app
spec:
  containers:
    - name: client
      image: client:1.0.0
      imagePullPolicy: Never
      ports:
        - containerPort: 8080
